# notebooklm_clone

./: README.md  TODO.md  pyproject.toml  streamlit_app.py
src/: chat.py  doc_parser.py  vectordb_ingestion.py
src/chat/: chat.py
src/podcast/: podcast_script.py  synthesize_speech.py
src/sources/: doc_parser.py  vectordb_ingestion.py
src/tools/: faqs.py  outline.py  summary.py
src/ui/: __init__.py  chat_column.py  sources_column.py  tools_notes_column.py
src/utils/: utils.py
