[tool.poetry]
name = "notebooklm-clone"
version = "0.1.0"
description = ""
authors = ["Paresh Pradhan <pareshppp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
google-cloud-texttospeech = "^2.23.0"
langchain = "^0.3.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
